# infinite-client

./: .factorypath  .gitignore  .gitmodules  Cargo.toml  INSTALLATION.md  NativeMeshEngine.md  README.ja.md  README.md  build.gradle.kts  gradle.properties  install.sh  proguard-rules.pro  qodana.yaml  qodona.yaml  rust-toolchain.toml  settings.gradle.kts
.github/workflows/: build.yml  gradle.yml  gradlew.yaml  qodana_code_quality.yml
.zed/: settings.json  tasks.json
README/en/: ADDON.md  README.md
README/ja/: ADDON.md  README.md
infinite-client/: Cargo.toml
infinite-client/crates/infinite-client/: Cargo.toml
infinite-client/crates/infinite-client/src/: infinite.rs  lib.rs  utils.rs
infinite-client/crates/infinite-client/src/graphics2d/: path2d.rs
infinite-client/crates/infinite-client/src/infinite/: property.rs
infinite-client/crates/infinite-client/src/utils/: atomic.rs
minecraft-rs/: Cargo.toml  build.rs
minecraft-rs/src/: lib.rs
rust/infinite-client/: Cargo.toml  cbindgen.toml  rust-toolchain.toml
rust/infinite-client/src/: graphics2d.rs  infinite.rs  lib.rs  projectile.rs
rust/infinite-client/src/features/local/: level.rs
rust/infinite-client/src/features/local/level/: block_highlight.rs  cave_highlight.rs
rust/infinite-client/src/graphics2d/: path2d.rs
rust/infinite-client/src/graphics2d/path2d/: ffi.rs
rust/infinite-client/src/graphics3d/: mesh.rs
rust/infinite-client/src/graphics3d/mesh/: block_mesh.rs  generator.rs  infinite_mesh.rs  types.rs
rust/infinite-client/src/infinite/: feature.rs  property.rs
rust/infinite-client/src/infinite/feature/: global.rs  local.rs
rust/infinite-client/src/infinite/feature/local/: level.rs
rust/infinite-client/src/infinite/feature/local/level/: block_highlight.rs  cave_highlight.rs
rust/infinite-client/src/infinite/feature/local/level/block_highlight/: methods.rs  settings.rs
rust/minecraft-rs/: Cargo.toml
rust/minecraft-rs/src/: color.rs  lib.rs  mgpu3d.rs
rust/minecraft-rs/src/mgpu3d/: child.rs  command.rs  handler.rs  highlight.rs  parent.rs  system.rs
rust/minecraft-rs/src/mgpu3d/parent/: handle_manager.rs
scripts/: action_prepare.sh  run_controller.py
scripts/tasks/: base.py  client.py  worker.py
src/client/kotlin/org/infinite/: ConfigManager.kt  InfiniteClient.kt  InfiniteClientDataGenerator.kt  Translation.kt  UltimateClient.kt
src/client/kotlin/org/infinite/docs/: Infinite.kt  Main.kt  Minecraft.kt
src/client/kotlin/org/infinite/feature/: ConfigurableFeature.kt
src/client/kotlin/org/infinite/features/: Feature.kt
src/client/kotlin/org/infinite/global/: ConfigurableGlobalFeature.kt  GlobalFeature.kt
src/client/kotlin/org/infinite/infinite/: InfiniteGlobalFeatures.kt  InfiniteLocalFeatures.kt
src/client/resources/: infinite-client.mixins.json  infinite.client.mixins.json  ultimate-client.mixins.json
src/main/resources/: fabric.mod.json  infinite.accesswidener
src/main/resources/themes/: forest.json  modern.json  neon.json  ocean.json  sunset.json
src/main/rust/: Cargo.toml
src/main/rust/src/: lib.rs  projectile.rs
ultimate/org/infinite/utils/: Color.kt  String.kt
(+725 files in other folders)
