[workspace]
resolver = "3"

members = [
    "project-xross/xross-alloc",
    "project-xross/xross-core",
    "project-xross/xross-macros",
    "project-xross/xross-metadata",
    "project-xross/xross-example/rust",
    "rust/infinite-client",
]

[workspace.package]
version = "2.3.0"
edition = "2024"
authors = ["The Infinity's"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xross-core = { path = "project-xross/xross-core" }
xross-macros = { path = "project-xross/xross-macros" }
xross-metadata = { path = "project-xross/xross-metadata" }
xross-alloc = { path = "project-xross/xross-alloc" }

[profile.release]
opt-level = 3          # 最大限の最適化
lto = "fat"            # Link Time Optimization (リンク時最適化)
codegen-units = 1      # コンパイル単位を1に制限して最適化を強化
panic = "abort"        # パニック時のスタックトレースを省きサイズと速度を優先
strip = true           # デバッグシンボルの削除
