[workspace]
resolver = "3"

members = [
    "rust/infinite-client", "rust/minecraft-rs",
]

[workspace.package]
version = "2.3.0"
edition = "2024"
authors = ["The Infinity's"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xross-core = { path = "project-xross/xross-core" }

[profile.release]
opt-level = 3          # 最大限の最適化
lto = "fat"            # Link Time Optimization (リンク時最適化)
codegen-units = 1      # コンパイル単位を1に制限して最適化を強化
panic = "abort"        # パニック時のスタックトレースを省きサイズと速度を優先
strip = true           # デバッグシンボルの削除
