[package]
name = "minecraft-rs"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
