[package]
name = "infinite-client"
version.workspace = true
edition.workspace = true

[lib]
# 共有ライブラリとしてビルド
crate-type = ["cdylib"]

[dependencies]
lyon = "1.0.16"
rustc-hash = "2.1.0"
rayon = "1.10.0"
xross-core = { workspace = true, features = ["xross-alloc"] }
minecraft-rs = { path = "../minecraft-rs"}
